# sen65

./: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.scripts/: clangd-wrapper.sh  (+1 more)
components/air_core/: CMakeLists.txt
components/air_core/inc/: adaptive_stats.h  air_aqi.h  air_core_lock.h  air_json.h  air_quality_level.h  app_config.h  baseline.h  event.h  filter.h  series_record.h  telemetry.h  types.h
components/air_core/src/: adaptive_stats.c  air_aqi.c  air_core_lock.c  air_json.c  air_quality_level.c  baseline.c  classifier.c  event.c  filter.c  series_record.c  telemetry.c
components/sen65/: CMakeLists.txt
components/sen65/inc/: app_config.h  baseline.h  classifier.h  sen65.h  sen65_task.h  types.h
components/sen65/src/: baseline.c  classifier.c  event.c  filter.c  sen65.c  sen65_task.c  series_record.c  telemetry.c
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  i2c_board.c  idf_component.yml  main.c  mqtt_air.c  mqtt_air.h  sen65.c  sen65.h  sen65_port.c
main/inc/: app_config.h  audio_mem.h  baseline.h  blufi_rules.h  classifier.h  event.h  filter.h  i2c_board.h  main.h  prj_confs.h  prj_data.h  prj_defines.h  prj_global.h  prj_mqtt.h  prj_network.h  prj_state.h  prj_wifi.h  sen65.h  sen65_task.h  telemetry.h  types.h  wifi_blufi.h
main/src/: baseline.c  blufi_init.c  blufi_rules.c  blufi_security.c  classifier.c  event.c  filter.c  main.c  mqtt_air.c  prj_confs.c  prj_data.c  prj_global.c  prj_mqtt.c  prj_network.c  prj_state.c  prj_wifi.c  sen65.c  sen65_task.c  telemetry.c  wifi_blufi.c
(+7 files in other folders)
